fix search with name and position to display right