@@ -2,7 +2,6 @@ package com.ff.fantasy_football.player;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -11,9 +10,10 @@ import jakarta.transaction.Transactional;
 
 /**
  * Contains the "business logic" to do CRUD operations
- * Processes the data retrieved from the repository and gets it ready for the controller
+ * Processes the data retrieved from the repository and gets it ready for the
+ * controller
  */
-@Component 
+@Component
 public class PlayerService {
     private final PlayerRepository playerRep;
 
@@ -24,32 +24,39 @@ public class PlayerService {
 
     /**
      * Get all players
+     * 
      * @return All the players in the database
      */
     public List<Player> getAllPlayers() {
         return playerRep.findAll();
     }
 
-      /**
+    /**
      * Find all players at a specific position
+     * 
      * @param positionName position the user wants
      * @return List of all players at that position
      */
-    public List<Player> getPlayerByPosition(String positionName){
-        return playerRep.findAll().stream().filter(player -> positionName.toLowerCase().equals(player.getPosition().toLowerCase())).collect(Collectors.toList());
+    public List<Player> getPlayerByPosition(String positionName) {
+        return playerRep.findAll().stream().filter(player -> positionName.equalsIgnoreCase(player.getPosition()))
+                .toList();
     }
 
     /**
      * Find a specific player by their name
+     * 
      * @param playerName Player to be searched for
      * @return List of players whose names contain the specified name
      */
     public List<Player> getPlayerByName(String playerName) {
-        return playerRep.findAll().stream().filter(player -> player.getName().toLowerCase().contains(playerName.toLowerCase())).collect(Collectors.toList());
+        return playerRep.findAll().stream()
+                .filter(player -> player.getName().toLowerCase().contains(playerName.toLowerCase()))
+                .toList();
     }
-    
+
     /**
      * Allow user to add a player to the database if needed ex. adding rookies
+     * 
      * @param player The player to be added
      * @return The player that was added
      */
@@ -59,9 +66,11 @@ public class PlayerService {
     }
 
     /**
-     * Update a player 
+     * Update a player
+     * 
      * @param player player to be updated
-     * @return the player that was updated if they are present or null if they aren't
+     * @return the player that was updated if they are present or null if they
+     *         aren't
      */
     public Player updatePlayer(Player player) {
         Optional<Player> currPlayer = playerRep.findPlayerByName(player.getName());
@@ -74,9 +83,10 @@ public class PlayerService {
         return null; // if player was not found
     }
 
-    @Transactional // Will maintain data integrity during delete 
+    @Transactional // Will maintain data integrity during delete
     /**
      * Allow user to delete a player ex. retiring players
+     * 
      * @param playerName Name of player that will be deleted
      */
     public void deletePlayer(String playerName) {
